@@ -70,6 +70,7 @@
 .site-breadcrumbs > .wrap,
 .site-inner > .wrap,
 .element-section > .element,
+.element.popout .jumbotron-wrap,
 .site-footer > .wrap {
 	margin-left: auto;
 	margin-right: auto;
@@ -86,6 +87,7 @@
 	.site-breadcrumbs > .wrap,
 	.site-inner > .wrap,
 	.element-section > .element,
+	.element.popout .jumbotron-wrap,
 	.site-footer > .wrap {
 		max-width: 940px;
 	}
@@ -100,6 +102,7 @@
 	.site-breadcrumbs > .wrap,
 	.site-inner > .wrap,
 	.element-section > .element,
+	.element.popout .jumbotron-wrap,
 	.site-footer > .wrap {
 		max-width: 720px;
 	}
@@ -112,6 +115,7 @@
 	.site-breadcrumbs > .wrap,
 	.site-inner > .wrap,
 	.element-section > .element,
+	.element.popout .jumbotron-wrap,
 	.site-footer > .wrap {
 		max-width: 480px;
 		padding-left: 15px;
