@@ -69,6 +69,7 @@
 .site-breadcrumbs > .wrap,
 .site-inner > .wrap,
 .element-section > .element,
+.element.popout .jumbotron-wrap,
 .site-footer > .wrap {
 	margin-right: auto;
 	margin-left: auto;
@@ -85,6 +86,7 @@
 	.site-breadcrumbs > .wrap,
 	.site-inner > .wrap,
 	.element-section > .element,
+	.element.popout .jumbotron-wrap,
 	.site-footer > .wrap {
 		max-width: 940px;
 	}
@@ -99,6 +101,7 @@
 	.site-breadcrumbs > .wrap,
 	.site-inner > .wrap,
 	.element-section > .element,
+	.element.popout .jumbotron-wrap,
 	.site-footer > .wrap {
 		max-width: 720px;
 	}
@@ -111,6 +114,7 @@
 	.site-breadcrumbs > .wrap,
 	.site-inner > .wrap,
 	.element-section > .element,
+	.element.popout .jumbotron-wrap,
 	.site-footer > .wrap {
 		max-width: 480px;
 		padding-left: 15px;
