@@ -6024,22 +6024,10 @@ blockquote small {
 	.jumbotron-outer.has-bg-shade.height-100vh .jumbotron-wrap {
 		position: absolute;
 		top: 50%;
+		left: 50%;
 		width: 100%;
-		-webkit-transform: translate(0, -50%);
-		transform: translate(0, -50%);
-	}
-	/* @noflip */
-	.height-100vh .jumbotron-wrap.pull-none {
-		right: 0;
-		left: 0;
-	}
-	/* @noflip */
-	.height-100vh .jumbotron-wrap.pull-left {
-		left: 10%;
-	}
-	/* @noflip */
-	.height-100vh .jumbotron-wrap.pull-right {
-		right: 10%;
+		-webkit-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
 	}
 	.tb-suck-up .element-section:first-child > .element-jumbotron.popout.height-100vh:first-child {
 		margin-top: 0 !important;
